examples/test/testpolicy19992.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19992
  namespace: namespace242
spec:
  podSelector:
    matchLabels:
      key5: value49
      key17: value21
      key23: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value23
          key30: value18
          key36: value22
      podSelector:
        matchLabels:
          key48: value38
          key24: value36
          key41: value37
